[gd_scene load_steps=37 format=4 uid="uid://cfhcxlpe62iy7"]

[ext_resource type="Script" uid="uid://ddeicrb5ub18r" path="res://scripts/world_01.gd" id="1_q81a1"]
[ext_resource type="Texture2D" uid="uid://dcirap48j5cvv" path="res://assets/pixel art doce/pixilart-drawing-2.png" id="2_sy8p5"]
[ext_resource type="Texture2D" uid="uid://0rhfd80l6fob" path="res://assets/pixel art doce/pixilart-drawing-3.png" id="3_gyxc4"]
[ext_resource type="Texture2D" uid="uid://bibrd7dx40by4" path="res://assets/pixel art doce/pixilart-drawing-4.png" id="4_e562m"]
[ext_resource type="Texture2D" uid="uid://bfbvb1dvlnc4c" path="res://assets/pixel art doce/pixilart-drawing-5.png" id="5_7bvdx"]
[ext_resource type="Texture2D" uid="uid://jog5bupojqi4" path="res://assets/Terrain/Terrain (16x16).png" id="6_csewm"]
[ext_resource type="Texture2D" uid="uid://bermueyl8gub8" path="res://assets/Terrain/Terrain.png" id="7_5sv08"]
[ext_resource type="Texture2D" uid="uid://bwau340x67xal" path="res://assets/Terrain/Spikes.png" id="8_3iqhl"]
[ext_resource type="Texture2D" uid="uid://oww8lcnf0oy8" path="res://assets/Terrain/Terrain 2.png" id="9_wajds"]
[ext_resource type="PackedScene" uid="uid://gn04sehqyptm" path="res://items/door.tscn" id="10_gdl5q"]
[ext_resource type="Script" uid="uid://cayyksgv7spix" path="res://scripts/door.gd" id="11_7irup"]
[ext_resource type="PackedScene" uid="uid://b4806ga1b52id" path="res://levels/world_04.tscn" id="12_pqdav"]
[ext_resource type="PackedScene" uid="uid://c78k16sm2u2x7" path="res://actors/player.tscn" id="13_sihsx"]
[ext_resource type="PackedScene" uid="uid://bcjgp15qo6x8u" path="res://actors/multiplayer_player.tscn" id="14_hctn2"]
[ext_resource type="PackedScene" uid="uid://dpne25ywqny5u" path="res://scenes/lever.tscn" id="15_dqa81"]
[ext_resource type="Script" uid="uid://b7ugjuqtp20tx" path="res://scripts/CameraFollow.gd" id="16_dgo2y"]
[ext_resource type="Script" uid="uid://cds7dkkpmt3dw" path="res://scripts/transition.gd" id="17_ul7xl"]
[ext_resource type="Shader" uid="uid://fhppjqfr4hwu" path="res://shaders/transition.gdshader" id="18_o2q72"]
[ext_resource type="Script" uid="uid://6ejenf15r0h3" path="res://scripts/color_rect.gd" id="19_ptmxd"]
[ext_resource type="PackedScene" uid="uid://cryxyf156txmu" path="res://scenes/pause_menu.tscn" id="20_flq8q"]
[ext_resource type="PackedScene" uid="uid://d3krcucth7r5w" path="res://items/botao_pressao.tscn" id="21_a0twr"]
[ext_resource type="PackedScene" uid="uid://b45r26snk7s0" path="res://items/plataforma.tscn" id="22_q3uvl"]
[ext_resource type="Script" uid="uid://c83vrgewiy1ig" path="res://scripts/game_manager.gd" id="25_k41aa"]
[ext_resource type="AudioStream" uid="uid://0eobv357csns" path="res://efeitos sonoros/Puddle Reflections - Aesthetic Lofi.mp3" id="26_vicbq"]
[ext_resource type="PackedScene" uid="uid://cvfpcoia8jape" path="res://scenes/coin.tscn" id="27_13ae1"]
[ext_resource type="FontFile" uid="uid://dgynk4vrrttwl" path="res://fonts/Classic-Font.ttf" id="28_t3cqv"]
[ext_resource type="PackedScene" uid="uid://bcdqf5avwwdu0" path="res://levels/falling_platform_doce.tscn" id="30_gyxc4"]
[ext_resource type="PackedScene" uid="uid://bstk5020dltbb" path="res://items/canvas_layer.tscn" id="30_sy8p5"]
[ext_resource type="PackedScene" uid="uid://d22xcxeopmjse" path="res://scenes/chocoloate.tscn" id="31_e562m"]
[ext_resource type="PackedScene" uid="uid://bllfwbvwni8mm" path="res://scenes/espinhos.tscn" id="31_gyxc4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_samdc"]
texture = ExtResource("6_csewm")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.88499, -8, -8, 8, -0.230215, 8, -0.0503559, -8)
0:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(8, -8, 8, -0.597138, 0.669079, -0.237421, 0.669079, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.0576, -8, -3.41732)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.88499, -8, -5.80584, 5.15834, -0.0503559, 8, -0.0503559, -8)
2:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(8, -8, 8, 8, -0.589933, 8, 0.669079, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.88499, -8, -8, 8, -0.230215, 8, -0.230215, -6.35262)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.0288, 8, -1.84895, 8, -1.30937, 8, -1.66909, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -0.589933, 8, 0.669079, -8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0/physics_layer_0/polygon_0/one_way = true
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0/physics_layer_0/polygon_0/one_way = true
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0/physics_layer_0/polygon_0/one_way = true
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.482014, -8, 8, 6.42456, 8, 8, 0.661872)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.0576, -8, -3.41732)
18:2/0 = 0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.0576, -8, -3.41732)
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.0576, -8, -3.41732)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l86n5"]
texture = ExtResource("7_5sv08")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:6/0 = 0
5:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_we2w3"]
texture = ExtResource("8_3iqhl")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.179857, 8, 0.899294, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jaywk"]
texture = ExtResource("9_wajds")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:8/0 = 0
11:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:10/0 = 0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:10/0 = 0
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:10/0 = 0
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:11/0 = 0
10:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:11/0 = 0

[sub_resource type="TileSet" id="TileSet_dgy4p"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_samdc")
sources/1 = SubResource("TileSetAtlasSource_l86n5")
sources/2 = SubResource("TileSetAtlasSource_we2w3")
sources/3 = SubResource("TileSetAtlasSource_jaywk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7k4mt"]
shader = ExtResource("18_o2q72")
shader_parameter/lines = 10.0
shader_parameter/threshold = 0.0
shader_parameter/line_color_a = Color(0.67451, 0.8, 0.894118, 1)
shader_parameter/line_color_b = Color(0.887285, 0.932199, 0.931839, 1)

[node name="world_06" type="Node2D"]
position = Vector2(288, 6)
script = ExtResource("1_q81a1")

[node name="BG" type="Node2D" parent="."]
position = Vector2(4, 5)

[node name="DistantBG" type="Parallax2D" parent="BG"]
scroll_scale = Vector2(0.5, 0.5)
scroll_offset = Vector2(-7, 0)
repeat_size = Vector2(304, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="BG/DistantBG"]
position = Vector2(-108, 128)
scale = Vector2(3.25781, 3.25781)
texture = ExtResource("2_sy8p5")
centered = false

[node name="DistantBG2" type="Parallax2D" parent="BG"]
scroll_scale = Vector2(0.5, 0.5)
scroll_offset = Vector2(-4, -417)
repeat_size = Vector2(304, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="BG/DistantBG2"]
position = Vector2(-108, 128)
scale = Vector2(3.25781, 3.25781)
texture = ExtResource("2_sy8p5")
centered = false

[node name="Clouds" type="Parallax2D" parent="BG"]
scroll_scale = Vector2(0.7, 0.7)
scroll_offset = Vector2(-196, 101)

[node name="Sprite2D" type="Sprite2D" parent="BG/Clouds"]
position = Vector2(3, 141)
scale = Vector2(3, 3)
texture = ExtResource("3_gyxc4")
centered = false

[node name="Clouds2" type="Parallax2D" parent="BG"]
scroll_offset = Vector2(459, -24)
repeat_size = Vector2(500, 0)
autoscroll = Vector2(-60, 0)
repeat_times = 10

[node name="Sprite2D" type="Sprite2D" parent="BG/Clouds2"]
position = Vector2(119, 80)
scale = Vector2(3, 3)
texture = ExtResource("4_e562m")
centered = false

[node name="Clouds3" type="Parallax2D" parent="BG"]
scroll_scale = Vector2(0.8, 0.8)
scroll_offset = Vector2(87, 122)
repeat_size = Vector2(500, 0)
autoscroll = Vector2(-50, 0)
repeat_times = 10

[node name="Sprite2D" type="Sprite2D" parent="BG/Clouds3"]
position = Vector2(287, 20)
scale = Vector2(3, 3)
texture = ExtResource("5_7bvdx")
centered = false

[node name="Clouds4" type="Parallax2D" parent="BG"]
scroll_scale = Vector2(0.8, 0.8)
scroll_offset = Vector2(-49, -37)
repeat_size = Vector2(500, 0)
autoscroll = Vector2(-50, 0)
repeat_times = 10

[node name="Sprite2D" type="Sprite2D" parent="BG/Clouds4"]
position = Vector2(287, 20)
scale = Vector2(3, 3)
texture = ExtResource("5_7bvdx")
centered = false

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(70, -2)
tile_map_data = PackedByteArray("AAAFABYAAwAFAAgAAAAGABYAAwAFAAgAAAAIABYAAwAFAAgAAAAHABYAAwAFAAgAAAAFABcAAwAFAAkAAAAFABgAAwAFAAoAAAAGABcAAwAFAAkAAAAGABgAAwAFAAoAAAAHABcAAwAFAAkAAAAHABgAAwAFAAoAAAAIABcAAwAFAAkAAAAIABgAAwAFAAoAAAAJABYAAwAFAAgAAAAJABUAAwAEAAkAAAAJABQAAwAEAAkAAAAJABMAAwAEAAkAAAAJABcAAwAFAAkAAAAJABgAAwAFAAoAAAAJABIAAwAEAAkAAAAJABEAAwAEAAkAAAAKABEAAwAFAAkAAAALABEAAwAGAAkAAAALABIAAwAGAAkAAAAKABIAAwAFAAkAAAAKABMAAwAFAAkAAAAKABQAAwAFAAkAAAAKABUAAwAFAAkAAAAKABYAAwAFAAgAAAAKABcAAwAFAAkAAAAKABgAAwAFAAoAAAALABMAAwAGAAkAAAALABQAAwAGAAkAAAALABUAAwAGAAkAAAALABYAAwAGAAgAAAALABgAAwAGAAoAAAALABcAAwAGAAkAAAAJABAAAwAEAAgAAAALABAAAwAGAAgAAAAKABAAAwAFAAgAAAAEABYAAwAFAAgAAAAEABcAAwAFAAkAAAAEABgAAwAFAAoAAAADABYAAwAFAAgAAAADABcAAwAFAAkAAAADABgAAwAFAAoAAAD5/xYAAwAGAAgAAAD5/xcAAwAGAAkAAAD5/xgAAwAGAAoAAAD4/xYAAwAFAAgAAAD3/xYAAwAFAAgAAAD2/xYAAwAEAAgAAAD2/xcAAwAEAAkAAAD3/xcAAwAFAAkAAAD4/xcAAwAFAAkAAAD4/xgAAwAFAAoAAAD3/xgAAwAFAAoAAAD2/xgAAwAEAAoAAAACABYAAwAFAAgAAAABABYAAwAEAAgAAAABABcAAwAEAAkAAAABABgAAwAEAAoAAAACABcAAwAFAAkAAAACABgAAwAFAAoAAAAQAB8AAwAFAAgAAAARAB8AAwAFAAgAAAASAB8AAwAFAAgAAAATAB8AAwAFAAgAAAAUAB8AAwAFAAgAAAAVAB8AAwAFAAgAAAAPAB8AAwAEAAgAAAAPACAAAwAEAAkAAAAPACEAAwAEAAoAAAAQACAAAwAFAAkAAAARACAAAwAFAAkAAAASACAAAwAFAAkAAAATACAAAwAFAAkAAAAUACAAAwAFAAkAAAAVACAAAwAGAAkAAAAVACEAAwAGAAoAAAAQACEAAwAFAAoAAAARACEAAwAFAAoAAAASACEAAwAFAAoAAAATACEAAwAFAAoAAAAUACEAAwAFAAoAAAAdAB0AAwAEAAgAAAAdAB4AAwAEAAkAAAAdAB8AAwAEAAoAAAAeAB0AAwAFAAgAAAAeAB4AAwAFAAkAAAAeAB8AAwAFAAoAAAAfAB0AAwAGAAgAAAAfAB4AAwAGAAkAAAAfAB8AAwAGAAoAAAAYAB4AAwAEAAgAAAAYAB8AAwAEAAkAAAAYACAAAwAEAAoAAAAZAB4AAwAFAAgAAAAZAB8AAwAFAAkAAAAZACAAAwAFAAoAAAAaAB4AAwAGAAgAAAAaAB8AAwAGAAkAAAAaACAAAwAGAAoAAAAiAB0AAwAEAAgAAAAiAB4AAwAEAAkAAAAiAB8AAwAEAAoAAAAjAB0AAwAFAAgAAAAjAB4AAwAFAAkAAAAjAB8AAwAFAAoAAAAkAB0AAwAGAAgAAAAkAB4AAwAGAAkAAAAkAB8AAwAGAAoAAAAnABwAAwAEAAgAAAAnAB0AAwAEAAkAAAAnAB4AAwAEAAoAAAAoABwAAwAFAAgAAAAoAB0AAwAFAAkAAAAoAB4AAwAFAAoAAAApABwAAwAFAAgAAAApAB0AAwAFAAkAAAApAB4AAwAFAAoAAAAqABwAAwAFAAgAAAArABwAAwAFAAgAAAAsABwAAwAFAAgAAAAtABwAAwAFAAgAAAAqAB0AAwAFAAkAAAArAB0AAwAFAAkAAAAsAB0AAwAFAAkAAAAtAB0AAwAGAAkAAAAtAB4AAwAGAAoAAAAqAB4AAwAFAAoAAAArAB4AAwAFAAoAAAAsAB4AAwAFAAoAAAArABsAAwAEAAkAAAAsABsAAwAFAAkAAAAtABsAAwAGAAkAAAArABoAAwAEAAkAAAAsABoAAwAFAAkAAAAtABoAAwAGAAkAAAArABkAAwAEAAkAAAAsABkAAwAFAAkAAAAtABkAAwAGAAkAAAArABgAAwAEAAkAAAAsABgAAwAFAAkAAAAtABgAAwAGAAkAAAArABcAAwAEAAgAAAAsABcAAwAFAAgAAAAtABcAAwAGAAgAAAAwABcAAwAEAAgAAAAwABgAAwAEAAkAAAAwABkAAwAEAAoAAAAxABcAAwAFAAgAAAAxABgAAwAFAAkAAAAxABkAAwAFAAoAAAAyABcAAwAGAAgAAAAyABgAAwAGAAkAAAAyABkAAwAGAAoAAABGABcAAwAEAAgAAABGABgAAwAEAAkAAABGABkAAwAEAAoAAABHABcAAwAFAAgAAABHABgAAwAFAAkAAABHABkAAwAFAAoAAABIABcAAwAFAAgAAABIABgAAwAFAAkAAABIABkAAwAFAAoAAABJABcAAwAFAAgAAABKABcAAwAFAAgAAABLABcAAwAFAAgAAABMABcAAwAFAAgAAABNABcAAwAFAAgAAABJABgAAwAFAAkAAABKABgAAwAFAAkAAABLABgAAwAFAAkAAABMABgAAwAFAAkAAABNABgAAwAGAAkAAABNABkAAwAGAAoAAABMABkAAwAFAAoAAABLABkAAwAFAAoAAABKABkAAwAFAAoAAABJABkAAwAFAAoAAAAUABYAAwAEAAgAAAAVABYAAwAFAAgAAAAVABcAAwAFAAkAAAAWABcAAwAFAAkAAAAXABcAAwAGAAkAAAAXABgAAwAGAAoAAAAWABYAAwAFAAgAAAAXABYAAwAGAAgAAAAUABcAAwAEAAkAAAAUABgAAwAEAAoAAAAVABgAAwAFAAoAAAAWABgAAwAFAAoAAAAdABAAAwAFAAgAAAAdABEAAwAFAAkAAAAdABIAAwAFAAoAAAAeABAAAwAFAAgAAAAeABEAAwAFAAkAAAAeABIAAwAFAAoAAAAfABAAAwAGAAgAAAAfABEAAwAGAAkAAAAfABIAAwAGAAoAAAAbABAAAwAEAAgAAAAbABEAAwAEAAkAAAAbABIAAwAEAAoAAAAcABAAAwAFAAgAAAAcABEAAwAFAAkAAAAcABIAAwAFAAoAAAA=")
tile_set = SubResource("TileSet_dgy4p")
metadata/_edit_group_ = true

[node name="Door" parent="." instance=ExtResource("10_gdl5q")]
position = Vector2(1286, 335)
script = ExtResource("11_7irup")
objetivo = 10
destino = ExtResource("12_pqdav")

[node name="Players" type="Node" parent="." groups=["players"]]

[node name="Player" parent="Players" instance=ExtResource("13_sihsx")]
position = Vector2(234, 277)

[node name="MultiplayerPlayer" parent="Players" instance=ExtResource("14_hctn2")]
position = Vector2(209, 279)

[node name="lever" parent="." instance=ExtResource("15_dqa81")]
position = Vector2(1282, 353)
next_level = "res://levels/world_07.tscn"
objetivo = 12

[node name="CameraFollow" type="Camera2D" parent="."]
position = Vector2(362, 306)
zoom = Vector2(0.7, 0.7)
limit_left = 0
script = ExtResource("16_dgo2y")
min_zoom = 0.8
max_zoom = 1.2

[node name="transition" type="CanvasLayer" parent="."]
script = ExtResource("17_ul7xl")

[node name="color_rect" type="ColorRect" parent="transition"]
material = SubResource("ShaderMaterial_7k4mt")
offset_left = 2.0
offset_top = 8.0
offset_right = 753.0
offset_bottom = 389.0
color = Color(0, 0, 0, 1)
script = ExtResource("19_ptmxd")

[node name="Pause_menu" parent="." instance=ExtResource("20_flq8q")]
visible = false

[node name="BotaoPressao" parent="." node_paths=PackedStringArray("plataforma") instance=ExtResource("21_a0twr")]
position = Vector2(105, 341)
plataforma = NodePath("../Plataforma")

[node name="Plataforma" parent="." instance=ExtResource("22_q3uvl")]
position = Vector2(30, 359)

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("player1", "player2", "respawn_point")]
unique_name_in_owner = true
script = ExtResource("25_k41aa")
player1 = NodePath("../Players/MultiplayerPlayer")
player2 = NodePath("../Players/Player")
respawn_point = NodePath("RespawnPoint")

[node name="RespawnPoint" type="Marker2D" parent="GameManager" groups=["spawn"]]
unique_name_in_owner = true
position = Vector2(224, 313)

[node name="musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("26_vicbq")
pitch_scale = 0.85
autoplay = true

[node name="coins" type="Node2D" parent="."]

[node name="coin" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(399, 477)

[node name="coin6" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(193, 292)

[node name="coin11" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(521, 239)

[node name="coin12" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(475, 460)

[node name="coin13" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(362, 204)

[node name="coin8" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(239, 225)

[node name="coin9" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(30, 317)

[node name="coin10" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(421, 206)

[node name="coin14" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(312, 205)

[node name="coin7" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(782, 343)

[node name="coin16" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(866, 345)

[node name="coin15" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(640, 438)

[node name="coin2" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(561, 449)

[node name="coin3" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(415, 332)

[node name="coin4" parent="coins" instance=ExtResource("27_13ae1")]
position = Vector2(282, 356)

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("28_t3cqv")

[node name="espinhos" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(-177, 533)

[node name="espinhos2" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(-72, 533)

[node name="espinhos3" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(33, 533)

[node name="espinhos4" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(135, 533)

[node name="espinhos5" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(239, 533)

[node name="espinhos6" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(343, 533)

[node name="espinhos7" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(449, 533)

[node name="espinhos8" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(556, 533)

[node name="espinhos9" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(661, 533)

[node name="espinhos10" parent="." instance=ExtResource("31_gyxc4")]
visible = false
position = Vector2(769, 533)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false

[node name="chocoloate" parent="." instance=ExtResource("31_e562m")]
position = Vector2(153, 341)

[node name="chocoloate2" parent="." instance=ExtResource("31_e562m")]
position = Vector2(732, 435)

[node name="CanvasLayer" parent="." instance=ExtResource("30_sy8p5")]

[node name="FallingPlatformDoce" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(307, 228)

[node name="FallingPlatformDoce2" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(361, 228)

[node name="FallingPlatformDoce3" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(429, 228)

[node name="FallingPlatformDoce4" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(471, 323)

[node name="FallingPlatformDoce5" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(347, 361)

[node name="FallingPlatformDoce8" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(922, 373)

[node name="FallingPlatformDoce9" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(977, 373)

[node name="FallingPlatformDoce10" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(1028, 374)

[node name="FallingPlatformDoce11" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(1080, 375)

[node name="FallingPlatformDoce12" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(1135, 376)

[node name="FallingPlatformDoce6" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(283, 403)

[node name="FallingPlatformDoce7" parent="." instance=ExtResource("30_gyxc4")]
position = Vector2(282, 489)

[connection signal="body_entered" from="Door" to="Door" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Door" to="Door" method="_on_Door_body_exited"]
